# anontgchat

./: .dockerignore  .gitignore  Dockerfile  NOMAIN.py  TestBOT_base_data_SQLite.py  TestBOT_base_data_postgres.py  TestBot.py  data.py  decorators.py  exceptions.py  main.py  messages.py  package_storage.py  pyproject.toml
storage/: data_base_by_SQLite.py  data_base_storage.py  json_storage.py  memory.py
